--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-rnd-rotate",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "A resizable and draggable and rotate component for React",
   "title": "react-rnd-rotate",
   "main": "./lib/index.es5.js",
@@ -91,6 +91,6 @@
   },
   "dependencies": {
     "re-resizable-rotate": "^0.0.9",
-    "react-draggable-rotate": "^0.0.6"
+    "react-draggable-rotate": "0.0.18"
   }
 }
